--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -2,8 +2,14 @@
 name: ECS Service Deployment
 
 on:
-  push:
-    branches: [master]
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'
 
 jobs:
   deploy:
