--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -2,6 +2,9 @@
 name: ECS Service Deployment
 
 on:
+  pull_request:
+    branches:
+      - feat/pl-staging-production-env
   workflow_dispatch:
     inputs:
       environment:
@@ -9,6 +12,14 @@ on:
         required: true
         default: 'test'
 jobs:
+  ci:
+    name: Continous Integration
+    runs-on: [ self-hosted ]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 14
   deploy:
     name: Continous Deployment
     runs-on: ubuntu-latest
