--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -2,9 +2,6 @@
 name: ECS Service Deployment
 
 on:
-  push:
-    branches:
-      - feat/pl-staging-production-env
   workflow_dispatch:
     inputs:
       environment:
@@ -12,19 +9,15 @@ on:
         required: true
         default: 'test'
 jobs:
-  ci:
-    name: Continous Integration
-    runs-on: [ self-hosted ]
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 14
   deploy:
     name: Continous Deployment
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set selected color
+        run: echo ${{ github.event.inputs.environment }}
+        id: random-color-generator
+
       - name: Setup AWS Actions
         uses: actions/checkout@v2
 
