--- a/copilot/deployment-load-balancer/manifest.yml
+++ b/copilot/deployment-load-balancer/manifest.yml
@@ -1,9 +1,9 @@
-# The manifest for the "test-sm" service.
+# The manifest for the "deployment-load-balancer" service.
 # Read the full specification for the "Load Balanced Web Service" type at:
 #  https://aws.github.io/copilot-cli/docs/manifest/lb-web-service/
 
 # Your service name will be used in naming your resources like log groups, ECS services, etc.
-name: test-sm
+name: deployment-load-balancer
 type: Load Balanced Web Service
 
 # Distribute traffic to your service.
@@ -31,8 +31,8 @@ exec: true     # Enable running commands in your container.
 #variables:                    # Pass environment variables as key value pairs.
 #  LOG_LEVEL: info
 
-secrets:                      # Pass secrets from AWS Systems Manager (SSM) Parameter Store.
-  GITHUB_TOKEN: GITHUB_TOKEN  # The key is the name of the environment variable, the value is the name of the SSM parameter.
+#secrets:                      # Pass secrets from AWS Systems Manager (SSM) Parameter Store.
+#  GITHUB_TOKEN: GITHUB_TOKEN  # The key is the name of the environment variable, the value is the name of the SSM parameter.
 
 # You can override any of the values defined above by environment.
 #environments:
