--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -38,5 +38,5 @@ jobs:
 
       - name: Deploy Amazon ECS task definition
         run: copilot deploy -e test
-        with:
+        env:
           VARIABLES: "hello world"
