--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -35,8 +35,9 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.REGION }}
+          build-args: VARIABLES="hello world"
 
       - name: Deploy Amazon ECS task definition
         run: copilot deploy -e test
-        env:
-          VARIABLES: "hello world"
+        with:
+          build-args: VARIABLES="hello world"
